Duy - fix the overflow on main tag #95

--- a/client/src/app/shared/components/gold-chart/gold-chart.component.scss
+++ b/client/src/app/shared/components/gold-chart/gold-chart.component.scss
@@ -106,7 +106,7 @@
 // CHART GOLD
 .chart-gold {
   height: 70rem;
-  flex: 3 0 60rem;
+  flex: 3 1 60rem;
 
   &__header {
     text-align: center;
